--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 *.exe
 *.out
 *.app
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
