--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(OpenCV_DIR /usr/lib/cmake/opencv4)
 set(OpenCV2_DIR /usr/include/opencv4/opencv2)
 
-#add_executable(road_detect AutoAdjust.hpp main.cpp GUI/mainwindow.cpp GUI/mainwindow.h GUI/ui_mainwindow.h LaneDetect.cpp LaneDetect.h)
+# 有GUI界面的代码
+add_executable(road_detect AutoAdjust.h GUI/main.cpp GUI/mainwindow.cpp GUI/mainwindow.h SignDetect.cpp SignDetect.h GUI/ui_mainwindow.h LaneDetect.cpp LaneDetect.h)
 
-add_executable(road_detect test2.cpp)
+## 没有GUI的demo
+#add_executable(road_detect LaneDetect.cpp LaneDetect.h main.cpp SignDetect.cpp SignDetect.h AutoAdjust.h)
 
 
 #查找Qt的库
