整理文件夹

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,10 @@ set(OpenCV_DIR /usr/lib/cmake/opencv4)
 set(OpenCV2_DIR /usr/include/opencv4/opencv2)
 
 # 有GUI界面的代码
-#add_executable(road_detect AutoAdjust.h GUI/main.cpp GUI/mainwindow.cpp GUI/mainwindow.h SignDetect.cpp SignDetect.h GUI/ui_mainwindow.h LaneDetect.cpp LaneDetect.h)
+add_executable(road_detect include/AutoAdjust.h include/AutoAdjust.cpp main.cpp GUI/mainwindow.cpp GUI/mainwindow.h include/SignDetect.cpp include/SignDetect.h GUI/ui_mainwindow.h include/LaneDetect.cpp include/LaneDetect.h)
 
 ## 没有GUI的demo
-add_executable(road_detect LaneDetect.cpp LaneDetect.h main.cpp SignDetect.cpp SignDetect.h AutoAdjust.h AutoAdjust.cpp)
+#add_executable(road_detect include/LaneDetect.cpp include/LaneDetect.h demo.cpp include/SignDetect.cpp include/SignDetect.h include/AutoAdjust.h include/AutoAdjust.cpp)
 
 
 #查找Qt的库
@@ -23,6 +23,4 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 target_link_libraries(road_detect ${OpenCV_LIBS}  Qt5::Widgets)
-
-
 
